<resources>
    <string name="app_name">GiveIt-gi</string>
    <string name="giveit_icon">Giveit</string>
    <string name="continue_as_a_donor">Continue as a Donor</string>
    <string name="continue_as_a_receiver">Continue as a Receiver</string>
    <string name="get_a_thing">Get A Thing</string>
    <string name="apply_for_donation">Apply for donation</string>
    <string name="events">Events</string>
    <string name="suggestion_box">Suggestion Box</string>
    <string name="phone_number">Phone number</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="forgotten_password">Forgotten Password?</string>
    <string name="err_password">Password cannot be empty.</string>
    <string name="err_email_empty">Email cannot be empty.</string>
    <string name="email">Email</string>
    <string name="create_new_account">Create new Account</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="create_account">Create Account</string>
    <string name="err_name_empty">Name is required.</string>
    <string name="err_phone_empty">Phone number is required.</string>
    <string name="err_password_confirm">Confirm password cannot be empty.</string>
    <string name="err_password_match">Password does not match.</string>
    <string name="err_email_format">Please provide a valid email.</string>
    <string name="err_password_length">Password length cannot be less than 8.</string>
    <string name="create_account_title">Creating an Account</string>
    <string name="create_account_desc">Please wait while we create your account.</string>
    <string name="account_created_successfully">Account created successfully.</string>
    <string name="account_not_created_error">Account not created, please try again later.</string>
    <string name="failed_to_login">Failed to login, please check your credentials.</string>
    <string name="login_title">Logging In</string>
    <string name="loggin_description">Please wait while we check your credentials.</string>
    <string name="reset_password">Forgot Password?</string>
    <string name="reset_password_desc">Enter your email to reset the password.</string>
    <string name="enter_email_to_reset_password">Enter email to reset password...</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="remmber_me">Remmber me?</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="title_activity_donor_main">DonorMainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_donation">add donation</string>
    <string name="donate_a_thing">Donate a thing</string>
    <string name="donate_money">Donate Money</string>
    <string name="add_events">Add Events</string>
    <string name="categories">Categories</string>
    <string name="desciption">Description</string>
    <string name="electronics">Electronics</string>
    <string name="furnitures">Furnitures</string>
    <string name="clothes">Clothes</string>
    <string name="other">Others</string>
    <string name="category">Category</string>
    <string name="add_image">Add Image</string>
    <string name="location">Location</string>
    <string name="title">Title</string>
    <string name="remove_image">Remove Image</string>
    <string name="title_cannot_be_null">Title cannot be empty.</string>
    <string name="description_cannot_be_null">Description cannot be empty.</string>
    <string name="category_cannot_be_null">Category cannot be empty.</string>
    <string name="location_cannot_be_null">Location cannot be empty.</string>
    <string name="select_image">Please select an image.</string>
    <string name="adding">Adding</string>
    <string name="wait">Please wait while we add your donation.</string>
    <string name="all_donation">All donations</string>
    <string name="title_of_donation">Title of donation</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="do_you_really_want_to_delete">Are you sure you want to delete this donation?</string>
    <string name="sure">Yes</string>
    <string name="add_new_image">Add New Image</string>
    <string name="your_history">History</string>
    <string name="created_at">Created At</string>
    <string name="get_this_item">Get this item</string>
    <string name="submit">Submit</string>
    <string name="id_card_enter">Enter your ID card number.</string>
    <string name="Id_card_number">ID Number</string>
    <string name="reason">Reason</string>
    <string name="id_card_important">Can\'t proces request without ID CARD NUMBER.</string>
    <string name="reason_cannot_be_null">Reason cannot be empty.</string>
    <string name="processing_request">Processing request.</string>
    <string name="please_wait_request">Please wait while, your request is being submitted.]</string>
    <string name="request_submitted_already">You have already submitted a request againts this item.</string>
    <string name="problem">Problem</string>
    <string name="amount">Amount</string>
    <string name="amount_cannot_be_null">Amount cannot be null.</string>
    <string name="problem_cannot_be_null">Problem cannot be empty.</string>
    <string name="payment">Payment</string>
    <string name="_0">$0</string>
    <string name="err_title_empty">Please enter the title of donation.</string>
    <string name="pay">Donate Money</string>
    <string name="enter_amount_you">Enter amount you want to donate.</string>
    <string name="pay_now">Pay Now</string>
    <string name="payment_processing">Your payment is being processed.</string>
    <string name="there_s_no_donation_as_of_now">THERE\'S NO DONATION AS OF NOW</string>
    <string name="contact_number">Contact Number</string>
    <string name="add_event">Add Event</string>
    <string name="pick_date">Pick date</string>
    <string name="pick_time">Pick Time</string>
    <string name="eventTitle">Event Title</string>
    <string name="description_of_event">Event Description</string>
    <string name="event_date">Event date</string>
    <string name="do_you_really_want_to_event">Are you sure you want to delete this event?</string>
    <string name="choose_date">Please choose a date.</string>
    <string name="choose_time">Please choose a date.</string>
    <string name="wait_event">Please wait, while we add your event.</string>
    <string name="update_your_information">Update your information</string>
    <string name="personal_information">Personal Information</string>
    <string name="change_profile">Change Profile</string>


</resources>