<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.giveit_gi.DonorActivities.fragments.HomeFragment"
        android:label="@string/categories"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_all_donation"
        android:name="com.example.giveit_gi.DonorActivities.fragments.DonationListFragment"
        android:label="@string/all_donation"
        tools:layout="@layout/fragment_donation_list" />
    <fragment
        android:id="@+id/nav_yourHistory"
        android:name="com.example.giveit_gi.DonorActivities.fragments.HistoryFragment"
        android:label="@string/all_donation"
        tools:layout="@layout/fragment_donation_list" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.giveit_gi.DonorActivities.fragments.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_donation_list" />


</navigation>