<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DonorActivities.CategoriesActivities.DonateThingsActivity">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        >

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/hero_image"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@drawable/place_holder_image"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                android:background="@drawable/corner_radius"
                android:clipToOutline="true"
                />
            <LinearLayout
                android:id="@+id/add_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_add_circle_outline_24"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_image"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="25sp"

                    />

            </LinearLayout>

        </FrameLayout>


        <TextView
            android:id="@+id/remove_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/remove_image"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_marginTop="4dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:visibility="gone"

            />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/title"
            app:helperText="Title of the Event"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/title_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/description_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/desciption"
            app:helperText="Description of the title"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/description_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/date_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/pick_date"
            app:helperText="Pick the event date."
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/date_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:inputType="text" />


        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/time_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/pick_time"
            app:helperText="Pick the event time."
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/time_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:inputType="text" />


        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/location_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/location"
            app:helperText="For example: Lahore, Islamabad,etc"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/location_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />


        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/addEvent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/add_event"
            android:textAllCaps="true"
            android:textSize="16sp"
            android:textStyle="bold"


            />




    </LinearLayout>











</ScrollView>