<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    >

    <TextView
        android:id="@+id/main_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reset_password"
        android:textSize="20sp"
        android:layout_margin="8dp"
        android:textColor="@color/purple_700"
        android:textStyle="bold"
        />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/reset_email_edittext_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_email_to_reset_password"
        android:layout_below="@id/main_title"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/reset_email_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"


            />

    </com.google.android.material.textfield.TextInputLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"

        android:layout_below="@id/reset_email_edittext_layout"
        >

        <Button
            android:id="@+id/confirmButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/confirm"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:textStyle="bold"


            />

        <Button
            android:id="@+id/cancelButton"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_toStartOf="@+id/confirmButton"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:textStyle="bold"


            />

<!--        <Button-->
<!--            android:id="@+id/cancelButton"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginEnd="12dp"-->
<!--            android:layout_toStartOf="@+id/confirmButton"-->
<!--            android:text="@string/cancel"-->
<!--            android:textAllCaps="false"-->
<!--            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"-->
<!--            android:textSize="18sp"-->
<!--            android:textStyle="bold" />-->
    </RelativeLayout>
</RelativeLayout>